# LangChainRagStarter

./: README.md  demo_lang_rag_app.py  globals.py  local_rag.ipynb  pyproject.toml  rag_app.py  rag_chat.py  rag_simple.py  step_by_step_rag.ipynb
pages/: rag_app_simple.py
pipeline Azure_search/: create_index.py.py
