[project]
name = "lang-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "faiss-cpu>=1.11.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.67",
    "langgraph>=0.5.1",
    "langsmith>=0.4.4",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "streamlit>=1.46.1",
]
